--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 Changelog
 
+v.0.3.1.1 (2020-07-22):
+Renamed the software to prevent possible problems with the Firefox copyright.
+
+v.0.3.1 (2020-07-22):
+Updated the download feature, so that the dl link only gets displayed, after having clicked the button.
+
 v0.3 (2020-07-18):
 Added a feature, that allows you to query on external search engines.
 
