--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,17 @@
 Changelog
 
+v.0.4 (2020-07-24):
+Added support for the Odysee platform.
+
+v.0.3.2 (2020-07-24):
+Updated the css.
+
+v.0.3.1 (2020-07-24):
+Updated the css.
+
+v.0.3.1 (2020-07-21):
+Fixed an issue, that prevented the user from downloading videos, that were not fixed.
+
 v0.3 (2020-07-18):
 Added a feature, that allows you to query on external search engines.
 
